<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_first_name_profile"
        style="@style/TextInputLayoutCustom.HelperText"
        android:layout_marginTop="32dp"
        android:hint="@string/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name_profile"
            style="@style/TextInputEditTextCustom.Disable" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_last_name_profile"
        style="@style/TextInputLayoutCustom.HelperText"
        android:layout_marginTop="24dp"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name_profile"
            style="@style/TextInputEditTextCustom.Disable" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_email_profile"
        style="@style/TextInputLayoutCustom.HelperText"
        android:layout_marginTop="24dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_profile"
            style="@style/TextInputEditTextCustom.Disable" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_username_profile"
        style="@style/TextInputLayoutCustom.HelperText"
        android:layout_marginTop="24dp"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username_profile"
            style="@style/TextInputEditTextCustom.Disable" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>